--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -9,7 +9,7 @@
  
   <p>
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, :size => 150 %>
   </p>
  
   <p>
