--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -8,7 +8,10 @@
     <%= f.label :description %><br>
     <%= f.text_area :description, size: "100x10" %>
   </p>
- 
+  <p>
+    <%= f.label :tag_list, "Tags (separated by commas)" %>
+    <%= f.text_field :tag_list %>
+  </p>
   <p>
     <%= f.button :submit, :class => 'btn btn-primary' %>
   </p>
