--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,6 @@
 <h1>Project: <%= @project.name %></h1>
 <h3>Description: <%= @project.description %></h3>
+<% @project.tag_list.each do |tag| %>
+  <%= link_to tag, tag_path(tag) %>
+<% end %>
 
