adding error message to the new project form

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,3 +11,4 @@
 </p>
 
 <%= link_to "Edit this Project", edit_project_path(@project), :class => 'btn btn-warning' %>
+<%= link_to "Back to the Front Page", root_path, :class => 'btn btn-primary' %>
