--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :project, url: projects_path do |f| %>
+<%= form_for @project do |f| %>
   <% if @project.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
@@ -20,7 +20,7 @@
   </p>
   <p>
     <%= f.label :tag_list, "Tags (separated by commas)" %>
-    <%= f.text_field :tag_list %>
+    <%= f.text_field :tag_list, value: @project.tag_list.to_s %>
   </p>
   <p>
     <%= f.button :submit, :class => 'btn btn-primary' %>
